Fixing z-indexing issues

--- a/CampaignManager.Frontend/src/styles/main.css
+++ b/CampaignManager.Frontend/src/styles/main.css
@@ -330,7 +330,7 @@
   overflow: hidden;
   object-fit: cover;
   border: 2px solid #000;
-  z-index: 1;
+  z-index: 0;
   border-radius: 3px;
 }
 .initiative .initiative-card:last-of-type .character-details,
